--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,8 @@
     "bootstrap-table": "^1.12.1",
     "echarts": "3.7.1",
     "laydate": "^5.0.85",
-    "font-awesome": "^5.3.1",
     "bootstrap-table-fixed-columns": "^1.0.0",
-    "bootstrap-switch": "^3.3.4"
+    "bootstrap-switch": "^3.3.4",
+    "font-awesome": "^5.3.1"
   }
 }
